apps/esphome/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esphome
  template:
    metadata:
      labels:
        app: esphome
    spec:
      containers:
        - name: esphome
          image: ghcr.io/esphome/esphome:stable
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6052
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: esphome-config
